fix: api changes
